--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   story:
+    path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
